Eliminate Guava use Caffeine as replacement for LoaderCache