@@ -28,8 +28,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.regex.Matcher;
 
-import com.google.common.collect.ImmutableList;
-
 import io.wcm.devops.conga.generator.spi.context.ValueProviderGlobalContext;
 
 /**
@@ -206,7 +204,7 @@ public final class VariableMapResolver {
     }
     if (!(listObject instanceof List)) {
       // allow to iterate over single values as well
-      listObject = ImmutableList.of(listObject);
+      listObject = List.of(listObject);
     }
     Map<String, Object> variablesClone = new LinkedHashMap<>(ObjectCloner.deepClone(variables));
     List<Object> result = new ArrayList<>();
